force-app/main/default/objects/dh_superclone__CloneObject__c/dh_superclone__CloneObject__c.object-meta.xml
<CustomObject>
    <label>Clone Object</label>
    <nameField>
        <label>Object Relationship</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clone Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>