force-app/main/default/objects/dh_superclone__CloneObject__c/fields/dh_superclone__CloneConfiguration__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__CloneConfiguration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Clone Configuration</label>
    <referenceTo>dh_superclone__CloneConfiguration__c</referenceTo>
    <relationshipLabel>Objects</relationshipLabel>
    <relationshipName>CloneObjects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>