force-app/main/default/objects/dh_superclone__CloneObject__c/fields/dh_superclone__ExtID__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__ExtID__c</fullName>
    <description>External ID used to help export configurations from an Org and insert them into a different Org.</description>
    <externalId>true</externalId>
    <label>ExtID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>