force-app/main/default/objects/dh_superclone__CloneObject__c/fields/dh_superclone__ObjectParent__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__ObjectParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Parent</label>
    <referenceTo>dh_superclone__CloneObject__c</referenceTo>
    <relationshipLabel>Object Children</relationshipLabel>
    <relationshipName>ObjectChild</relationshipName>
    <type>Lookup</type>
</CustomField>