force-app/main/default/objects/dh_superclone__CloneObject__c/fields/dh_superclone__RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__RelationshipName__c</fullName>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>