force-app/main/default/objects/dh_superclone__CloneObject__c/listViews/dh_superclone__All.listView-meta.xml
<ListView>
    <fullName>dh_superclone__All</fullName>
    <columns>dh_superclone__CloneConfiguration__c</columns>
    <columns>dh_superclone__ObjectParent__c</columns>
    <columns>dh_superclone__ObjectName__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>